@@ -1,6 +1,4 @@
 
-
-
 <details>
 <summary>Table of Contents</summary>
 <!-- TOC -->
@@ -9,7 +7,7 @@
   - [Prerequisites](#prerequisites)
   - [Parameters](#parameters)
   - [Adding External Helm Repositories](#adding-external-helm-repositories)
-- [Installing TIBCO JasperReports® Server](#installing-tibco-jasperreports-server)
+- [Installing JasperReports® Server](#installing-jasperreports-server)
   - [JMS Configuration](#jms-configuration)
   - [Ingress Controller](#ingress-controller)
   - [Monitoring](#monitoring)
@@ -21,7 +19,7 @@
   - [Prerequisites](#prerequisites)
   - [Installation Procedure](#installation-procedure)
 - [Integrating the Scalable Query Engine and JasperReports Server](#integrating-the-scalable-query-engine-and-jasperreports-server)
-- [Use Case: Deploying TIBCO JasperReports® Server Using PostgreSQL Container in K8s Cluster](#use-case-deploying-tibco-jasperreports-server-using-postgresql-container-in-k8s-cluster)
+- [Use Case: Deploying JasperReports® Server Using PostgreSQL Container in K8s Cluster](#use-case-deploying-jasperreports-server-using-postgresql-container-in-k8s-cluster)
   - [Installation](#installation-1)
  - [Troubleshooting](#troubleshooting)
   <!-- /TOC -->
@@ -29,53 +27,53 @@
   
   
 # Introduction
-  This helm chart is used to install TIBCO JasperReports® Server in Kubernetes and integrate it with the Scalable Query Engine. 
+  This helm chart is used to install JasperReports® Server in Kubernetes and integrate it with the Scalable Query Engine. 
 
 # Prerequisites
 1. Docker-engine (19.x+) setup with Docker Compose  (3.9+)
 1. K8s cluster with 1.19+
-1. TIBCO JasperReports® Server
+1. JasperReports® Server
 1. Keystore 
 1. Git
 1. [Helm 3.5](https://helm.sh/docs/intro/)
 1. [kubectl commandline tool](https://kubernetes.io/docs/tasks/tools/)   
 1. Minimum Knowledge of Docker and K8s
 
-# Step-by-step Guide to deploy TIBCO JasperReports® Server on K8s
-To deploy TIBCO JasperReports&reg; Server K8s Cluster from scratch, you can follow instructions at [Use Case: Deploying TIBCO JasperReports® Server Using PostgreSQL Container in K8s Cluster](#use-case-deploying-tibco-jasperreports-server-using-postgresql-container-in-k8s-cluster)
+# Step-by-step Guide to deploy JasperReports® Server on K8s
+To deploy JasperReports&reg; Server K8s Cluster from scratch, you can follow instructions at [Use Case: Deploying JasperReports® Server Using PostgreSQL Container in K8s Cluster](#use-case-deploying-jasperreports-server-using-postgresql-container-in-k8s-cluster)
 
 # Parameters
 
-These parameters and values are the same as parameters in `K8s/jrs/helm/values.yaml` and will be used by TIBCO JasperReports® Server Helm chart during installation.
+These parameters and values are the same as parameters in `K8s/jrs/helm/values.yaml` and will be used by JasperReports® Server Helm chart during installation.
 
 | Parameter                                                        | Description                                                                                                         | default Value                                                                                                                                                               |
 |------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | replicaCount                                                     | Number of pods                                                                                                      | 1 (It will not come into effect if autoscaling is enabled.)                                                                                                                 | 
-| jrsVersion                                                       | TIBCO JasperReports® Server release version                                                                         | 8.1.1                                                                                                                                                                       | 
-| image.tag                                                        | Name of the TIBCO JasperReports® Server webapp image tag                                                            | TIBCO JasperReports® Server Release Version                                                                                                                                 |
-| image.name                                                       | Name of the TIBCO JasperReports® Server webapp image                                                                | jasperserver-webapp                                                                                                                                                         |
+| jrsVersion                                                       | JasperReports® Server release version                                                                         | 8.2.0                                                                                                                                                                       | 
+| image.tag                                                        | Name of the JasperReports® Server webapp image tag                                                            | JasperReports® Server Release Version                                                                                                                                 |
+| image.name                                                       | Name of the JasperReports® Server webapp image                                                                | jasperserver-webapp                                                                                                                                                         |
 | image.pullPolicy                                                 | Docker image pull policy                                                                                            | IfNotPresent                                                                                                                                                                |
 | image.PullSecrets                                                | Name of the image pull secret                                                                                       | Pull secret should be created manually before using it in same namespace, [See Docs](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/) |
 | nameOverride                                                     | Override the default helm chart name                                                                                | jasperserver-pro                                                                                                                                                            |
 | fullnameOverride                                                 | Override the default full chart name                                                                                | null                                                                                                                                                                        |
 | secretKeyStoreName                                               | Name of the keystore secret                                                                                         | jasperserver-keystore                                                                                                                                                       |
 | secretLicenseName                                                | Name of the license secret                                                                                          | jasperserver-license                                                                                                                                                        |
-| serviceAccount.enabled                                           | Service account for TIBCO JasperReports® Server webapp                                                              | true                                                                                                                                                                        |
+| serviceAccount.enabled                                           | Service account for JasperReports® Server webapp                                                              | true                                                                                                                                                                        |
 | serviceAccount.annotations                                       | Adds new annotations                                                                                                | null                                                                                                                                                                        |
 | serviceAccount.name                                              | Name of the service account                                                                                         | jasperserver-pro                                                                                                                                                            |
 | rbac.create                                                      | Creates role and role binding                                                                                       | true                                                                                                                                                                        |
-| rbac.name                                                        | Name of the TIBCO JasperReports® Server role and role binding                                                       | jasperserver-role                                                                                                                                                           |
+| rbac.name                                                        | Name of the JasperReports® Server role and role binding                                                       | jasperserver-role                                                                                                                                                           |
 | podAnnotations                                                   | Adds pod annotations                                                                                                | null                                                                                                                                                                        |
-| securityContext.capabilities.drop                                | Drops Linux capabilites for the TIBCO JasperReports® Server webapp                                                  | All                                                                                                                                                                         |
-| securityContext.runAsNonRoot                                     | Runs the TIBCO JasperReports® Server webapp as non root user                                                        | true                                                                                                                                                                        |
-| securityContext.runAsUser                                        | User id to run the TIBCO JasperReports® Server webapp                                                               | 10099                                                                                                                                                                       |
-| buildomatic.enabled                                              | Installs or skips creation of the TIBCO JasperReports® Server repository DB                                         | true                                                                                                                                                                        |
-| buildomatic.name                                                 | Name of the TIBCO JasperReports® Server command line tool                                                           | jasperserver-buildomatic                                                                                                                                                    |
-| buildomatic.imageTag                                             | Buildomatic image tag                                                                                               | Same as TIBCO JasperReports® Server release version                                                                                                                         |
+| securityContext.capabilities.drop                                | Drops Linux capabilites for the JasperReports® Server webapp                                                  | All                                                                                                                                                                         |
+| securityContext.runAsNonRoot                                     | Runs the JasperReports® Server webapp as non root user                                                        | true                                                                                                                                                                        |
+| securityContext.runAsUser                                        | User id to run the  JasperReports® Server webapp                                                               | 10099                                                                                                                                                                       |
+| buildomatic.enabled                                              | Installs or skips creation of the  JasperReports® Server repository DB                                         | true                                                                                                                                                                        |
+| buildomatic.name                                                 | Name of the JasperReports® Server command line tool                                                           | jasperserver-buildomatic                                                                                                                                                    |
+| buildomatic.imageTag                                             | Buildomatic image tag                                                                                               | Same as JasperReports® Server release version                                                                                                                         |
 | buildomatic.imageName                                            | Name of the buildomatic image                                                                                       | null                                                                                                                                                                        |
 | buildomatic.pullPolicy                                           | Image pull policy                                                                                                   | IfNotPresent                                                                                                                                                                |
 | buildomatic.PullSecrets                                          | Image pull secrets                                                                                                  | null                                                                                                                                                                        |
-| buildomatic.includeSamples                                       | Installs TIBCO JasperReports® Server samples in JasperReports Server DB                                             | true                                                                                                                                                                        |
+| buildomatic.includeSamples                                       | Installs  JasperReports® Server samples in JasperReports Server DB                                             | true                                                                                                                                                                        |
 | db.env                                                           | Enables the DB configuration using environment variables                                                            | false                                                                                                                                                                       |
 | db.jrs.dbHost                                                    | JasperReports Server repository DB host                                                                             | repository-postgresql.default.svc.cluster.local                                                                                                                             |
 | db.jrs.dbPort                                                    | JasperReports Server repository DB port                                                                             | 5432                                                                                                                                                                        |
@@ -88,29 +86,29 @@ These parameters and values are the same as parameters in `K8s/jrs/helm/values.y
 | db.audit.dbName                                                  | JasperReports Server audit DB name                                                                                  | null                                                                                                                                                                        |
 | db.audit.dbUserName                                              | JasperReports Server audit DB user name                                                                             | null                                                                                                                                                                        |
 | db.audit.dbPassword                                              | JasperReports Server audit DB password                                                                              | null                                                                                                                                                                        |
-| extraEnv.javaopts                                                | Adds JAVA_OPTS to TIBCO JasperReports® Server application                                                           | -XX:+UseContainerSupport -XX:MinRAMPercentage=33.0 -XX:MaxRAMPercentage=75.0                                                                                                |
+| extraEnv.javaopts                                                | Adds JAVA_OPTS to JasperReports® Server application                                                           | -XX:+UseContainerSupport -XX:MinRAMPercentage=33.0 -XX:MaxRAMPercentage=75.0                                                                                                |
 | extraEnv.normal                                                  | Adds all the normal key value pair variables                                                                        | null                                                                                                                                                                        |
 | extraEnv.secrets                                                 | Adds all the environment references from secrets or configmaps                                                      | null                                                                                                                                                                        | 
 | extraVolumeMounts                                                | Adds extra volume mounts                                                                                            | null                                                                                                                                                                        |
 | extraVolumes                                                     | Adds extra volumes                                                                                                  | null                                                                                                                                                                        |
-| Service.type                                                     | TIBCO JasperReports® Server Service type                                                                            | ClusterIP                                                                                                                                                                   |
-| Service.port                                                     | TIBCO JasperReports® Server Service port                                                                            | 80                                                                                                                                                                          |
-| healthcheck.enabled                                              | Checks TIBCO JasperReports® Server pod health status                                                                | true                                                                                                                                                                        |
-| healthcheck.livenessProbe.port                                   | TIBCO JasperReports® Server container port                                                                          | 8080                                                                                                                                                                        |
-| healthcheck.livenessProbe.initialDelaySeconds                    | Initial waiting time to check the health and restarts the TIBCO JasperReports® Server Webapp pod                    | 350                                                                                                                                                                         |
+| Service.type                                                     |  JasperReports® Server Service type                                                                            | ClusterIP                                                                                                                                                                   |
+| Service.port                                                     |  JasperReports® Server Service port                                                                            | 80                                                                                                                                                                          |
+| healthcheck.enabled                                              | Checks JasperReports® Server pod health status                                                                | true                                                                                                                                                                        |
+| healthcheck.livenessProbe.port                                   | JasperReports® Server container port                                                                          | 8080                                                                                                                                                                        |
+| healthcheck.livenessProbe.initialDelaySeconds                    | Initial waiting time to check the health and restarts the  JasperReports® Server Webapp pod                    | 350                                                                                                                                                                         |
 | healthcheck.livenessProbe.failureThreshold                       | Threshold for health checks                                                                                         | 10                                                                                                                                                                          |
 | healthcheck.livenessProbe.periodSeconds                          | Time period to check the health                                                                                     | 10                                                                                                                                                                          |
 | healthcheck.livenessProbe.timeoutSeconds                         | Timeout                                                                                                             | 4                                                                                                                                                                           |
-| healthcheck.readinessProbe.port                                  | TIBCO JasperReports® Server container port                                                                          | 8080                                                                                                                                                                        |
+| healthcheck.readinessProbe.port                                  |  JasperReports® Server container port                                                                          | 8080                                                                                                                                                                        |
 | healthcheck.readinessProbe.initialDelaySeconds                   | Initial delay before checking the health checks                                                                     | 90                                                                                                                                                                          |
 | healthcheck.readinessProbe.failureThreshold                      | Threshold for health checks                                                                                         | 15                                                                                                                                                                          |
 | healthcheck.readinessProbe.periodSeconds                         | Time period to check the health checks                                                                              | 10                                                                                                                                                                          |
 | healthcheck.readinessProbe.timeoutSeconds                        | Timeout                                                                                                             | 4                                                                                                                                                                           |
-| resources.enabled                                                | Enables the minimum and maximum resources used by TIBCO JasperReports® Server                                       | true                                                                                                                                                                        |
-| resources.limits.cpu                                             | Maximum CPU for TIBCO JasperReports® Server Webapp pod                                                              | "3"                                                                                                                                                                         |
-| resources.limits.memory                                          | Maximum Memory for TIBCO JasperReports® Server Webapp pod                                                           | 7.5Gi                                                                                                                                                                       |
-| resources.requests.cpu                                           | Minimum CPU for TIBCO JasperReports® Server Webapp pod                                                              | "2"                                                                                                                                                                         |
-| resources.requests.memory                                        | Minimum Memory for TIBCO JasperReports® Server Webapp pod                                                           | 3.5Gi                                                                                                                                                                       |
+| resources.enabled                                                | Enables the minimum and maximum resources used by JasperReports® Server                                       | true                                                                                                                                                                        |
+| resources.limits.cpu                                             | Maximum CPU for JasperReports® Server Webapp pod                                                              | "3"                                                                                                                                                                         |
+| resources.limits.memory                                          | Maximum Memory for JasperReports® Server Webapp pod                                                           | 7.5Gi                                                                                                                                                                       |
+| resources.requests.cpu                                           | Minimum CPU for  JasperReports® Server Webapp pod                                                              | "2"                                                                                                                                                                         |
+| resources.requests.memory                                        | Minimum Memory for JasperReports® Server Webapp pod                                                           | 3.5Gi                                                                                                                                                                       |
 | jms.enabled                                                      | Enables the ActiveMQ cache service                                                                                  | true                                                                                                                                                                        |
 | jms.jmsBrokerUrl                                                 | Override ActiveMQ Broker Url                                                                                        | null                                                                                                                                                                        |
 | jms.name                                                         | ActiveMQ deployment name                                                                                            | jasperserver-cache                                                                                                                                                          |
@@ -127,25 +125,25 @@ These parameters and values are the same as parameters in `K8s/jrs/helm/values.y
 | jms.healthcheck.readinessProbe.failureThreshold                  | Threshold for health check                                                                                          | 15                                                                                                                                                                          |
 | jms.healthcheck.readinessProbe.periodSeconds                     | Time period for health check                                                                                        | 10                                                                                                                                                                          |
 | jms.securityContext.capabilities.drop                            | Linux capabilities to drop for the pod                                                                              | All                                                                                                                                                                         |
-| ingress.enabled                                                  | TIBCO JasperReports® Server ingress                                                                                 | true                                                                                                                                                                        |
+| ingress.enabled                                                  | JasperReports® Server ingress                                                                                 | true                                                                                                                                                                        |
 | ingress.annotations.ingress.kubernetes.io\/cookie-persistence    | Work with multiple pods and stickyness                                                                              | "JRS_COOKIE"                                                                                                                                                                |
-| ingress.hosts.host                                               | Adds valid DNS hostname to access the TIBCO JasperReports® Server                                                   | null                                                                                                                                                                        |
+| ingress.hosts.host                                               | Adds valid DNS hostname to access the  JasperReports® Server                                                   | null                                                                                                                                                                        |
 | ingress.tls                                                      | Adds TLS secret name to allow secure traffic                                                                        | null                                                                                                                                                                        | 
 | scalableQueryEngine.enabled                                      | Deploy and configure Scalable Query Engine                                                                          | false                                                                                                                                                                       |
 | scalable-query-engine.replicaCount                               | Number of pods for Scalable Query Engine                                                                            | 1                                                                                                                                                                           |
-| scalable-query-engine.image.tag                                  | Scalable Query Engine image tag                                                                                     | 8.1.1                                                                                                                                                                       |
+| scalable-query-engine.image.tag                                  | Scalable Query Engine image tag                                                                                     | 8.2.0                                                                                                                                                                       |
 | scalable-query-engine.image.name                                 | Name of the Scalable Query Engine image                                                                             | null                                                                                                                                                                        |
 | scalable-query-engine.image.pullPolicy                           | Scalable Query Engine image pull policy                                                                             | ifNotPresent                                                                                                                                                                |
 | scalable-query-engine.autoscaling.enabled                        | Enables the HPA for Scalable Query Engine                                                                           | true                                                                                                                                                                        |
-| scalable-query-engine.drivers.image.tag                          | Scalable Query Engine Drivers image tag                                                                             | 8.1.1                                                                                                                                                                       |
+| scalable-query-engine.drivers.image.tag                          | Scalable Query Engine Drivers image tag                                                                             | 8.2.0                                                                                                                                                                       |
 | scalable-query-engine.drivers.image.name                         | Scalable Query Engine Drivers image name                                                                            | null                                                                                                                                                                        |
 | scalable-query-engine.kubernetes-ingress.controller.service.type | Scalable Query Engine Service Type                                                                                  | ClusterIP                                                                                                                                                                   |
 | autoscaling.enabled                                              | Scales the JasperReports Server application,  **Note:** Make sure metric server is installed or metrics are enabled | false                                                                                                                                                                       |
 | autoscaling.minReplicas                                          | Minimum number of pods maintained by autoscaler                                                                     | 1                                                                                                                                                                           |
 | autoscaling.maxReplicas                                          | Maximum number of pods maintained by autoscaler                                                                     | 4                                                                                                                                                                           |
 | autoscaling.targetCPUUtilizationPercentage                       | Minimum CPU utilization to scale up the application                                                                 | 50%                                                                                                                                                                         |
-| autoscaling.targetMemoryUtilizationPercentage                    | Minimum memory utilization to scale up the TIBCO JasperReports® Server applications                                 | 50%                                                                                                                                                                         |
-| autoscaling.scaleDown.stabilizationWindowSeconds                 | Time to give TIBCO JasperReports® Server Webapp pod to finish all current tasks                                     | 300                                                                                                                                                                         |
+| autoscaling.targetMemoryUtilizationPercentage                    | Minimum memory utilization to scale up the JasperReports® Server applications                                 | 50%                                                                                                                                                                         |
+| autoscaling.scaleDown.stabilizationWindowSeconds                 | Time to give JasperReports® Server Webapp pod to finish all current tasks                                     | 300                                                                                                                                                                         |
 | metrics.enabled                                                  | Enables the Prometheus metrics                                                                                      | false                                                                                                                                                                       |
 | kube-prometheus-stack.prometheus-node-exporter.hostRootFsMount   |                                                                                                                     | false                                                                                                                                                                       |
 | kube-prometheus-stack.grafana.service.type                       | Grafana service type                                                                                                | NodePort                                                                                                                                                                    |
@@ -163,65 +161,177 @@ These parameters and values are the same as parameters in `K8s/jrs/helm/values.y
     helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
     helm repo add elastic https://helm.elastic.co
 
+# Setting Java options
+During the deployment of JasperReports® Server with helm, JAVA_OPTS can be specified within the `K8s/jrs/helm/values.yaml` file.
+This configuration option enables customization of the Java Virtual Machine settings, which can optimize the performance of the JasperReports® Server application.
 
-# Installing TIBCO JasperReports® Server
+If deploying JasperReports® Server with docker images based on JDK17, an additional JAVA_OPTS options need to be added in the in `K8s/jrs/helm/values.yaml` file:
+
+```yaml
+extraEnv:
+ javaOpts: "-XX:+UseContainerSupport -XX:MinRAMPercentage=33.0 -XX:MaxRAMPercentage=75.0 --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.lang.ref=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED --add-opens java.base/java.nio.channels=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.security=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.util.regex=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/javax.security.auth.login=ALL-UNNAMED --add-opens java.base/javax.security.auth=ALL-UNNAMED --add-opens java.base/jdk.internal.access.foreign=ALL-UNNAMED --add-opens java.base/sun.net.util=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED --add-opens java.base/sun.util.calendar=ALL-UNNAMED"
+```
+
+
+# Installing  JasperReports® Server
 
 1. Go to `jaspersoft-containers/K8s`, and to update the dependency charts, run `helm dependencies update jrs/helm`.
 2. Update the default_master.properties in `Docker/jrs/resources/default_properties` as needed.
-3. (Optional , in case DB has to be configure using env variables)Update the `db` section in `values.yaml` with the actual JasperReports Server DB details or create a separate secret like below.
+3. **Optional Step**: is required only if you plan to use environment variables from **Kubernetes Secrets** to pass `jasperserver` database details.
+This option can be useful when the JasperReports® Server application needs to connect to its repository database, which is deployed externally and already loaded. 
+Repository details will be stored in Kubernetes secrets and will be used as environment variables during application startup.
+
+There are two ways to manage the Kubernetes Secret for passing `jasperserver` database details:
+
+- The Secret can be automatically generated from the values provided in `K8s/jrs/helm/values.yaml`. This approach simplifies the Secret management process by automatically populating it with the required details and deploying it.
+- Alternatively, you can create a **Custom Kubernetes Secret** and deploy it into the cluster. This option provides greater control over the Secret contents and can be useful when specific Secrets management requirements need to be met.  
+
+Note that both options can only be used when the `jasperserver` repository database is already created and loaded.
+
+The first step in either case is to set `buildomatic.enabled` to **false** in `K8s/jrs/helm/values.yaml`.
+This setting instructs the Helm chart to skip the `jasperserver-buildomatic` job that creates and loads the repository database. 
+
+ 
+**Option 1: Automatically generated Kubernetes Secret**
    
+Update the `db` section in `K8s/jrs/helm/values.yaml`, set `db.env` to **true**. Then, configure the `jrs` sub-section with the necessary database details. Note that you should not pass a `secretName` in this case.
+Here is configuration example:
+```yaml
+db:
+  env: true
+  secretName:
+  jrs:
+    dbHost: repository-postgresql.default.svc.cluster.local
+    dbPort: 5432
+    dbName: jasperserver
+    dbUserName: postgres
+    dbPassword: postgres
+```
 
-      
-          apiVersion: v1
-          kind: Secret
-          type: Opaque
-          metadata:
-            name: jasperserver-pro-db-secret
-            labels:
-          data:
-            DB_HOST: host-name
-            DB_PORT: port-name
-            DB_NAME: db-name
-            DB_USER_NAME:db-user-name
-            DB_PASSWORD:  db-password
+**Note** that in this example, the `jasperserver` database was pre-created using the PostgreSQL Helm chart from this guide, and it is part of the same Kubernetes cluster in the default namespace.
+If JasperReports® Server is deployed in a different namespace or cluster, update the `dbHost` parameter in the following format: `<helm-name>-postgresql.<namespace>.svc.cluster.<cluster-name>`.
+If the JasperReports® Server repository database is deployed remotely, such as in AWS RDS, then set the `dbHost` to a value that is accessible from the Kubernetes cluster.  
 
-All the DB details should be encoded in base64 format. 
+With this step completed, you can move on to the next installation instructions.
 
-   **Note:** By default, the below details are used and for this, DB should be part of K8s Cluster in the default namespace. Please note the  DB is already created, adding this won't enforce to create a DB
- If JasperReports Server is deployed in a different project, then change the dbHost in the following format: `respository-postgresql.<namespacet>.svc.cluster.local`.
+
+**Option 2: Custom Kubernetes Secret**
    
+First create a separate secret in `K8s/jrs/helm/templates` folder, for example:
+  
+**Filename**: `K8s/jrs/helm/templates/envsecret.yaml`
+   
+```yaml
+  apiVersion: v1
+  kind: Secret
+  type: Opaque
+  metadata:
+    name: custom-db-secret
+    labels:
+  data:
+    DB_HOST: host-name
+    DB_PORT: port-name
+    DB_NAME: db-name
+    DB_USER_NAME: db-user-name
+    DB_PASSWORD:  db-password
+```
 
-       dbHost: repository-postgresql.default.svc.cluster.local
-       dbPort: 5432
-       dbName: jasperserver
-       dbUserName: postgres
-       dbPassword: postgres
+**Note**: Every variable value under `data` section should be encoded in base64 format. You can use the following command to encode a string in base64 on Linux: 
+```commandline
+echo -n "my-password" | base64
+```
+On Windows use powershell command that can encode text in file:
+```
+certutil -f -encode raw.txt encoded.txt
+```
 
-These details are stored in Kubernetes secrets and used as environment variables during application startup.
+After the secret file is created and the values are encoded in base64, it has to be deployed into the Kubernetes cluster using the following command:
+```commandline
+kubectl apply -f K8s/jrs/helm/templates/envsecret.yaml
+```
 
-**Note on Audit DB:** Enable the `db.audit.enable=true` if separate Audit DB is required for audit events, and add the below values to the db-secrets. Please note the Audit DB is already created, adding this won't enforce to create a DB
+Then edit `K8s/jrs/helm/values.yaml` and go to the `db` section. Set `env` to **true** and pass the secret name that you created. For example: 
+  
+```yaml
+db:
+  env: true
+  secretName: custom-db-secret
+  jrs:
+    dbHost: repository-postgresql.default.svc.cluster.local
+    dbPort: 5432
+    dbName: jasperserver
+    dbUserName: postgres
+    dbPassword: postgres
+```  
+**Note**: when `secretName` is set, then all properties under `jrs` sub-section will be ignored.
+     
+You may now proceed to the next steps of the installation.
 
 
-      AUDIT_DB_HOST: audit-db-host
-      AUDIT_DB_PORT:  audit-db-port
-      AUDIT_DB_NAME:  audit-db-name
-      AUDIT_DB_USER_NAME: audit-db-user-name
-      AUDIT_DB_PASSWORD: audit-password
+**JasperReports® Server Compact and Split installation**
+- In Compact installation mode (default), all audit events will be stored in the same repository database.
+- In Split installation mode (selected in default_master.properties), audit events will be stored in a separate database.
 
-4. Build the docker images for TIBCO JasperReports® Server, and Scalable Query Engine (see the [Docker JasperReports Server readme](../../Docker/jrs#readme) and [Docker Scalable Query Engine readme](../../Docker/scalableQueryEngine#readme) ).
+To use the secrets for Compact installation, no additional configuration is required.
+
+To use the secrets for Split installation, first ensure that the audit database has already been created, loaded, and is accessible.
+
+Then, set `db.audit.enable=true` in `K8s/jrs/helm/values.yaml` to get automatically generated secret:
+
+```yaml
+db:
+  env: false
+  secretName:
+  jrs:
+    dbHost: repository-postgresql.default.svc.cluster.local
+    dbPort: 5432
+    dbName: jasperserver
+    dbUserName: postgres
+    dbPassword: postgres
+  audit:
+    enabled: true
+    dbHost: repository-postgresql.default.svc.cluster.local
+    dbPort: 5432
+    dbName: jrsaudit
+    dbUserName: postgres
+    dbPassword: postgres
+```
+
+or update your custom secret file `K8s/jrs/helm/templates/envsecret.yaml` with additional properties for Audit DB:
+
+```yaml
+  apiVersion: v1
+  kind: Secret
+  type: Opaque
+  metadata:
+    name: custom-db-secret
+    labels:
+  data:
+    DB_HOST: host-name
+    DB_PORT: port-name
+    DB_NAME: db-name
+    DB_USER_NAME: db-user-name
+    DB_PASSWORD: db-password
+    AUDIT_DB_HOST: audit-db-host
+    AUDIT_DB_PORT: audit-db-port
+    AUDIT_DB_NAME: audit-db-name
+    AUDIT_DB_USER_NAME: audit-db-user-name
+    AUDIT_DB_PASSWORD: audit-password
+```
+4. Build the docker images for JasperReports® Server, and Scalable Query Engine (see the [Docker JasperReports Server readme](../../Docker/jrs#readme) and [Docker Scalable Query Engine readme](../../Docker/scalableQueryEngine#readme) ).
 5. Generate the keystore and copy it to the `k8s/jrs/helm/secrets/keystore` folder, see here for [Keystore Generation ](../../Docker/jrs#keystore-generation).
-6. Copy the TIBCO JasperReports® Server license to the `k8s/jrs/helm/secrets/license` folder.
+6. Copy the JasperReports® Server license to the `k8s/jrs/helm/secrets/license` folder.
 
 ## JMS Configuration
-  By default, TIBCO JasperReports® Server will install using activemq docker image. You can disable it by changing the parameter `jms.enabled=false`. 
+  By default, JasperReports® Server will install using activemq docker image. You can disable it by changing the parameter `jms.enabled=false`. 
  
  External JMS instance can also be used instead of in-build JMS setup by adding the external jms url `jms.jmsBrokerUrl`. You can access it by using tcp port, for instance `tcp://<JMS-URL>:61616`.
 
 ## Ingress Controller
 
-You can use HA Proxy ingress controller to manage the traffic across the TIBCO JasperReports® Server pods.
+You can use HA Proxy ingress controller to manage the traffic across the JasperReports® Server pods.
 
-**Note:** Enable the ingress controller so that TIBCO JasperReports® Server can work with multiple pods.
+**Note:** Enable the ingress controller so that JasperReports® Server can work with multiple pods.
 
 To enable this setup, run the following command.
 
@@ -270,7 +380,7 @@ For more information and configuration, see the [Official Docs](https://github.c
   
 - Set **buildomatic.enabled=true** for repository setup. By default samples are included, if it is not required, set **buildomatic.includeSamples=false**
 
-- Run the below command to install TIBCO JasperReports® Server and repository setup. 
+- Run the below command to install JasperReports® Server and repository setup. 
 
 `helm install jrs jrs/helm --namespace jrs --wait --timeout 17m0s`
 
@@ -282,7 +392,7 @@ For more information and configuration, see the [Official Docs](https://github.c
 
 
 ## Verifying installation
-After `helm install` is finished you can verify installed TIBCO JasperReports® Server cluster. 
+After `helm install` is finished you can verify installed JasperReports® Server cluster. 
 
 - Switch to jrs namespace. 
 
@@ -300,7 +410,7 @@ List all the resources.
   1. Enable the container insights for logging and monitoring, [see the docs](https://docs.aws.amazon.com/AmazonCloudWatch/latest/monitoring/deploy-container-insights-EKS.html) for enabling the container insights.
 
 ## Installation
-  1. Build the images for TIBCO JasperReports® Server and Scalable Query Engine, see the [Docker TIBCO JasperReports® Server readme](../../Docker/jrs#readme) and [Docker Scalable Query Engine readme](../../Docker/scalableQueryEngine#readme). 
+  1. Build the images for JasperReports® Server and Scalable Query Engine, see the [Docker JasperReports® Server readme](../../Docker/jrs#readme) and [Docker Scalable Query Engine readme](../../Docker/scalableQueryEngine#readme). 
   2. Push the images to ECR, [see the docs](https://docs.aws.amazon.com/AmazonECR/latest/userguide/docker-push-ecr-image.html). 
   3. Add external repositories. 
     
@@ -309,7 +419,7 @@ List all the resources.
     
   4. Run`helm dependencies update jrs/helm`.       
   5. Update the `jrs/helm/values.yaml` or use `--set <paramater_name>=<value>`. 
-  6. Follow the [TIBCO JasperReports® Server installation procedure](#installing-tibco-jasperreports-server). 
+  6. Follow the [JasperReports® Server installation procedure](#installing-jasperreports-server). 
   
   **Note:** Logging and monitoring are not required if EKS container insights are enabled.
 
@@ -318,7 +428,7 @@ AWS EKS offers two types of Load Balancers that can be deployed for K8s services
 - Classic Load Balancer - deployed by default for any service with LoadBalancer type. This is **L4** load balancer that works on network layer.
 - Application Load Balancer - **L7** load balancer that enables the load balancer to make smarter load balancing decisions, and to apply optimizations and changes to the content (such as compression and encryption) based on your application needs
 
-By default, TIBCO JasperReports® Server k8s cluster comes with an internal HAProxy Load Balancer which covers all the needs to route traffic to the proper pod.
+By default,JasperReports® Server k8s cluster comes with an internal HAProxy Load Balancer which covers all the needs to route traffic to the proper pod.
 In case if you want to control traffic on AWS Application Load Balancer side instead, you have to perform the following actions:
 
 1. Deploy AWS Load Balancer Controller into your cluster, using [AWS Guide](https://docs.aws.amazon.com/eks/latest/userguide/alb-ingress.html)
@@ -326,7 +436,7 @@ In case if you want to control traffic on AWS Application Load Balancer side ins
 3. Find ``<CONTAINER_PATH>/jaspersoft-containers/K8s/jrs/helm/Chart.yaml``, and comment out dependency on HAProxy chart:
 
         - name: kubernetes-ingress
-          version: 1.15.4
+          version: 1.29.3
           repository: "@haproxytech"
           condition: ingress.enabled
 
@@ -352,11 +462,11 @@ In case if you want to control traffic on AWS Application Load Balancer side ins
       tls: []
 ```
 
-7. Deploy TIBCO JasperReports® Server cluster, after successful deployment get the ALB hostname by running:
+7. Deploy JasperReports® Server cluster, after successful deployment get the ALB hostname by running:
 
         kubectl get ingress
 
-8. Connect to TIBCO JasperReports® Server `http://INGRESS-HOSTNAME/jasperserver-pro`
+8. Connect to JasperReports® Server `http://INGRESS-HOSTNAME/jasperserver-pro`
 
 # Integrating the Scalable Query Engine and JasperReports Server
 
@@ -369,13 +479,13 @@ In case if you want to control traffic on AWS Application Load Balancer side ins
 1. Follow the [JasperReports Server installation procedure](#installing-jrs) to install the JasperReports Server, and the Scalable Query Engine will integrate automatically.   
 
 
-# Use Case: Deploying TIBCO JasperReports® Server Using PostgreSQL Container in K8s Cluster
+# Use Case: Deploying JasperReports® Server Using PostgreSQL Container in K8s Cluster
  
  
 ## Installation
 
 1. Clone the jaspersoft-containers ``git clone git@github.com:TIBCOSoftware/js-docker.git``.
-2. Run ``cd <CONTAINER_PATH>`` and download a commercial edition of TIBCO JasperReports® Server WAR File installer zip to your current directory.
+2. Run ``cd <CONTAINER_PATH>`` and download a commercial edition of JasperReports® Server WAR File installer zip to your current directory.
 <br />**Note:**  CONTAINER_PATH=<YOUR_SYSTEM_DIR>/js-docker
 3. Run ``cd <CONTAINER_PATH>/jaspersoft-containers/Docker/jrs`` and update the `.env` if you need to change the version, tags, chromium installation, etc.
 4. Run ``cd <CONTAINER_PATH>/jaspersoft-containers/Docker/jrs/scripts`` and then run ``./unpackWARInstaller.sh`` to unzip the installer file.
@@ -425,9 +535,9 @@ If password wasn't set to `postgres`, check [Troubleshooting](#troubleshooting)
 helm install jrs jrs/helm --namespace jrs --wait --timeout 12m0s
 ```
 
-   It will take few minutes to set up the DB and install the TIBCO JasperReports® Server webapp, JMS, and other addons like ingress controller, metrics, and logging.
+   It will take few minutes to set up the DB and install the JasperReports® Server webapp, JMS, and other addons like ingress controller, metrics, and logging.
  
-19. Open TIBCO JasperReports® Server webapp url:
+19. Open JasperReports® Server webapp url:
 - if Ingress was set to enabled (in values.yaml, see the [Parameters](#parameters)):
     
 ```
